// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UploadDocsOptions renders the page and all input choices when claim has an absence period for each leave reason 1`] = `
<form
  class="usa-form"
  method="post"
>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
    tabindex="-1"
  >
    Additional documentation
  </h1>
  <fieldset
    class="usa-fieldset margin-top-3 usa-form-group"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
    >
      What kind of document are you uploading?
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-intro"
    >
      You only need to complete this if you received a notice from the Department of Family and Medical Leave asking you to provide additional documents or you need to provide proof of birth or placement. 
    </span>
    <div
      class="margin-top-3"
    >
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice1"
          name="upload_docs_options"
          type="radio"
          value="UPLOAD_MASS_ID"
        />
        <label
          class="usa-radio__label"
          for="InputChoice1"
        >
          Massachusetts driver’s license or ID
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice2"
          name="upload_docs_options"
          type="radio"
          value="UPLOAD_ID"
        />
        <label
          class="usa-radio__label"
          for="InputChoice2"
        >
          Different identification documentation
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice3"
          name="upload_docs_options"
          type="radio"
          value="UPLOAD_PROOF_OF_BIRTH"
        />
        <label
          class="usa-radio__label"
          for="InputChoice3"
        >
          Proof of birth
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice4"
          name="upload_docs_options"
          type="radio"
          value="UPLOAD_PROOF_OF_PLACEMENT"
        />
        <label
          class="usa-radio__label"
          for="InputChoice4"
        >
          Proof of placement
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice5"
          name="upload_docs_options"
          type="radio"
          value="UPLOAD_PREGNANCY_MEDICAL_CERTIFICATION"
        />
        <label
          class="usa-radio__label"
          for="InputChoice5"
        >
          Certification of Your Serious Health Condition
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice6"
          name="upload_docs_options"
          type="radio"
          value="UPLOAD_MEDICAL_CERTIFICATION"
        />
        <label
          class="usa-radio__label"
          for="InputChoice6"
        >
          Certification of Your Serious Health Condition
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice7"
          name="upload_docs_options"
          type="radio"
          value="UPLOAD_CARING_LEAVE_CERTIFICATION"
        />
        <label
          class="usa-radio__label"
          for="InputChoice7"
        >
          Certification of Your Family Member’s Serious Health Condition
        </label>
      </div>
    </div>
  </fieldset>
  <button
    class="usa-button position-relative margin-top-4"
    type="submit"
  >
    Save and continue
  </button>
</form>
`;

exports[`UploadDocsOptions when claim has no absence periods renders only id input choices 1`] = `
<form
  class="usa-form"
  method="post"
>
  <h1
    class="js-title margin-top-0 margin-bottom-2 font-heading-sm line-height-sans-3"
    tabindex="-1"
  >
    Additional documentation
  </h1>
  <fieldset
    class="usa-fieldset margin-top-3 usa-form-group"
  >
    <legend
      class="usa-label text-bold usa-legend font-heading-lg line-height-sans-3 margin-bottom-1 maxw-tablet"
    >
      What kind of document are you uploading?
    </legend>
    <span
      class="display-block line-height-sans-5 measure-5 usa-intro"
    >
      You only need to complete this if you received a notice from the Department of Family and Medical Leave asking you to provide additional documents or you need to provide proof of birth or placement. 
    </span>
    <div
      class="margin-top-3"
    >
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice8"
          name="upload_docs_options"
          type="radio"
          value="UPLOAD_MASS_ID"
        />
        <label
          class="usa-radio__label"
          for="InputChoice8"
        >
          Massachusetts driver’s license or ID
        </label>
      </div>
      <div
        class="usa-radio measure-5 bg-transparent"
      >
        <input
          class="usa-radio__input"
          id="InputChoice9"
          name="upload_docs_options"
          type="radio"
          value="UPLOAD_ID"
        />
        <label
          class="usa-radio__label"
          for="InputChoice9"
        >
          Different identification documentation
        </label>
      </div>
    </div>
  </fieldset>
  <button
    class="usa-button position-relative margin-top-4"
    type="submit"
  >
    Save and continue
  </button>
</form>
`;
